# svelte-tauri-starter

./: components.json  package.json  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20251207_000001_create_connection_table.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs
src-tauri/src/entity/: connection_entity.rs  mod.rs  prelude.rs
src-tauri/src/model/: connection_model.rs  mod.rs
src-tauri/src/repository/: connection_repository.rs  mod.rs
src-tauri/src/service/: mod.rs  stater_service.rs
src-tauri/src/utilities/: app_state.rs  local_db.rs  logging.rs  mod.rs
src/lib/components/icons/: Close.svelte
src/lib/features/connection/components/: ConnectionSelector.svelte
src/lib/features/connection/hooks/: index.svelte.ts
src/lib/features/connection/interface/: index.svelte.ts
src/lib/features/queue/hooks/: index.svelte.ts
src/lib/features/queue/interface/: index.svelte.ts
src/lib/layouts/: AppSideBar.svelte  MiniSideBar.svelte  TitleBar.svelte
src/lib/shared/components/icons/: Minimize.svelte  RestoreDown.svelte  RestoreUp.svelte
src/lib/shared/components/ui/alert/: alert-description.svelte  alert-title.svelte  alert.svelte
src/lib/shared/components/ui/button/: button.svelte
src/lib/shared/components/ui/card/: card-action.svelte  card-content.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
src/lib/shared/components/ui/input/: input.svelte
src/lib/shared/components/ui/resizable/: resizable-handle.svelte  resizable-pane-group.svelte
src/lib/shared/constants/: sidebar.svelte.ts
src/lib/shared/stores/: sidebar.svelte.ts  theme.svelte.ts
src/lib/styles/: app.css
src/routes/: +layout.svelte  +page.svelte
src/styles/: app.css
(+39 files in other folders)
