[package]
name = "starter"
version = "0.1.0"
description = "starter - A light Weight desktop app for managing bullMq."
authors = ["Athithian"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "starter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [
    "migration"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"

dirs-next = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
strum = "0.26"
strum_macros = "0.26"
tokio = "1.47.1"
anyhow = "1.0.100"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
sea-orm = { version = "1.1.12", features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio-native-tls",
] }
chrono = { version = "0.4", features = ["serde"] }
migration = { path = "./migration"}
redis = "1.0.1"
